Improved Hibernate Distribution state store (CORE-1317)
- Migrated StoredApplicationState to using compound primary key
  lookup/create rather than named query
- Removed unnecessary named query
- Generated initial SQL schema for Flyway and enabled Flyway usage
- Implemented the abstract contract test suite using H2 Memory and
  Postgres backends
- Fixed various input validation bugs in Hibernate state store